# preqc-pack

./: .gitignore  404.html  CHANGELOG.md  CNAME  CONTRIBUTING.md  Cargo.toml  Dockerfile  Makefile  README.md  checksum.html  fastqc.html  index.html  intro.html  mislabeling.html  print.html  searchindex.js  searchindex.json
.github/workflows/: mdbook.yaml  release.yaml
benches/: my_benchmark.rs
data/: README.md  fsize_nreads.tsv  get_fsize_nreads.sh  patterns2json.py
docs/: book.toml
docs/src/: SUMMARY.md  checksum.md  fastqc.md
docs/src/fastqc/metrics/: adapterContent.md  basicStats.md  kmerContent.md  overRepresentedSeqs.md  perBaseNContent.md  perBaseSeqContent.md  perBaseSeqQuality.md  perSeqGCContent.md  perSeqQualityScore.md  perTileQualityScore.md  seqDuplicationLevel.md  seqLenDistribution.md
examples/: bamqc.rs  fastqc.rs  fastqc_parallel.rs  mislabeling.rs  out_sorted_unique.bam  test_bwa.rs
fastqc/metrics/: adapterContent.html  basicStats.html  kmerContent.html  overRepresentedSeqs.html  perBaseNContent.html  perBaseSeqContent.html  perBaseSeqQuality.html  perSeqGCContent.html  perSeqQualityScore.html  perTileQualityScore.html  seqDuplicationLevel.html  seqLenDistribution.html
src/: SUMMARY.md  fastqc.rs  hasher.rs  lib.rs  mislabeling.md  util.rs
src/qc/: fastqc.rs  hasher.rs  mislabeling.rs  mod.rs  util.rs
src/qc/bam/: fastbam.rs  fastbam_copy.rs  mod.rs  qualimap.rs
src/qc/config/: bam_config.rs  fastq_config.rs  mod.rs
src/qc/exp/: mod.rs
src/qc/fastq/: fastqc.rs  hasher.rs  mislabeling.rs  mod.rs
