[package]
authors = ["Jingcheng Yang <yjcyxky@163.com>"]
edition = "2018"
name = "preqc-pack"
version = "0.2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.2"
blake2 = "0.9"
bson = "2.0.0"
digest = "0.9.0"
exitcode = "1.1.2"
fastq = "0.6.0"
futures = "0.3.5"
lazy_static = "1.4.0"
log = "0.4.11"
md-5 = "0.9.1"
regex = "1.3.9"
serde = {version = "1.0.59", features = ["derive"]}
serde_json = "1.0.59"
stderrlog = "0.4.3"
structopt = "0.3.17"
bwa = { git = "https://github.com/10XGenomics/rust-bwa" }

[profile.release]
lto = true
debug = false
opt-level = 3
