[package]
authors = ["Jingcheng Yang <yjcyxky@163.com>"]
edition = "2018"
name = "preqc-pack"
version = "0.2.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.2"
blake2 = "0.9"
# hashbrown = { version = "0.12", features = ["serde"] }
digest = "0.9.0"
exitcode = "1.1.2"
fastq = "0.6.0"
futures = "0.3.5"
lazy_static = "1.4.0"
log = "0.4.11"
md-5 = "0.9.1"
probability = "0.19.1"
regex = "1.3.9"
serde = { version = "1.0.59", features = ["derive"] }
serde_json = "1.0.59"
stderrlog = "0.5.4"
structopt = "0.3.17"
bwa = { git = "https://github.com/yjcyxky/rust-bwa", rev = "360ff84" }

[profile.release]
debug = false
lto = true
opt-level = 3
